made some changes to the media queries now the webiste is correctly visible atleast in my phone

--- a/style.css
+++ b/style.css
@@ -196,11 +196,11 @@ input[type="button"]:hover {
     position: absolute;
     z-index: 1;
     background-color: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 40%;
+    width: 19.65em;
+    height: 8em;
     align-items: center;
     align-content: center;
     padding: 0% 0% 0% 15%;
-    margin: 25% 0% 0 0%;
+    margin: 15% 0% 0 0%;
   }
 }
